fix: backend search limits, Flyway baseline, and test config
- Add Pageable limits to CouncilRepository, SuburbRepository, MaterialRepository search queries (5 councils/materials, 10 suburbs)
- SearchService uses PageRequest.of(0, 5/10) for all search calls
- Remove application-local.yml which was overriding datasource to H2, hiding seeded PostgreSQL data
- Add baseline-on-migrate and baseline-version: 0 to application.yml so Flyway handles both fresh and pre-seeded DBs
- Make V1 migration idempotent (IF NOT EXISTS) so it is safe to run against existing schema
- Fix @MockBean import in CouncilControllerTest (wrong package caused compile error)
- Add application-test.yml with H2 config for @ActiveProfiles("test") tests

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>